Fixed alignment of match results for players through style.css. First iteration of favicon as generic Smash logo, can change to brand specific icon once determined. As for footer, example implementation in rankings.html and home.html, but would it be possible to include the footer as its own view, so it can just be called and placed in the bottom of the page per page? Finally, minor styliistic changes to landing page/overall styling.

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -29,7 +29,9 @@ body {
 }
 
 .navbar {
-    text-transform:uppercase;background-color:#1A1A1A;border:0;
+    text-transform:uppercase;
+    background-color:#1A1A1A;
+    border:0;
 }
 
 .navbar .nav > li >a {
@@ -49,7 +51,8 @@ body {
     color:#FFCC66
 }
 
-.navbar .navbar-brand:hover, .navbar .navbar-brand:focus{
+.navbar .navbar-brand:hover, 
+.navbar .navbar-brand:focus{
     background-color:#1A1A1A; 
     color:#FFCC66
 }
@@ -71,9 +74,13 @@ p.small {
     font-size: 16px;
 }
 
-.table th {
+.header_center {
     border: 0 !important;
     text-align: center;
+}
+
+.table th {
+    border: 0 !important;
 }
 
 .table td {
@@ -226,7 +233,8 @@ header .intro-text .name {
     text-transform: uppercase;
     font-size: 4em;
     font-weight: 700;
-    margin-bottom: 0em;
+    margin-bottom: -20px;
+    white-space: nowrap;
 }
 
 header .intro-text .skills {
@@ -396,7 +404,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #060c12;
+    background-color: #141414;
 }
 
 footer .footer-col {
@@ -405,17 +413,27 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #030609;
+    background-color: #0D0D0D;
+}
+
+.footer_links{
+    text-align: left;
 }
 
 .footer_links li {
     display:inline;
+    
 }
 
 .footer_links li a{
-    padding: 0em 1em;border-left:1px solid silver;
+    padding: 0em 1em;
+    border-left:1px solid silver;
 }
 
 .footer_links li:first-child a{
     border-left: 0;
+}
+
+.copyright {
+    text-align: right;
 }
